# blog_service

./: .env.template  .gitignore  Blog_service.postman_collection.json  README.md  docker-compose.yml
.github/workflows/: test_auth_service.yml
auth/: Dockerfile
auth/src/: main.rs
auth_service/: Cargo.toml  Dockerfile
auth_service/src/: db.rs  error_handler.rs  jwt_auth.rs  main.rs  schema.rs
auth_service/src/users/: basic_auth.rs  mod.rs  model.rs  routes.rs  tests.rs
blog/: Cargo.toml  Dockerfile
blog/src/: main.rs
common_lib/: db.rs  error_handler.rs  jwt_auth.rs  mod.rs  utils.rs
post_service/: Cargo.toml  Dockerfile
post_service/src/: db.rs  error_handler.rs  main.rs  schema.rs
post_service/src/posts/: model.rs  routes.rs  tests.rs
postgres/: init-database.sh
