[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "uuid", "chrono"] }
argon2 = "0.5.0"
rand_core = { version = "0.6.4", features = ["std"] }
env_logger = "0.10.0"
lazy_static = "1.4"
log = "0.4"
jsonwebtoken = "8.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
