[package]
name = "post_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "uuid", "chrono"] }
env_logger = "0.10.0"
lazy_static = "1.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8"
uuid = { version = "1.3.0", features = ["serde", "v4"] }